fix: Fixes warning and NPE exceptions in SmackDebugger.